<resources>
    <string name="app_name">Supermarket</string>

    <string name="login">PRIJAVA</string>
    <string name="registration">REGISTRACIJA</string>
    <string name="user_name">Korisnicko ime</string>
    <string name="pass">Lozinka</string>

    <string name="button">Registruj se</string>
    <string name="button2">Nastavi</string>
    <string name="forgotPass">Zaboravljana lozinka?</string>
    <string name="termsOfUse">Uslovi koriscenja</string>

    <string name="error_message">Doslo je do greske pokusajte ponovo</string>
    <string name="basket">Korpa</string>
    <string name="addressconfirmation">Potvrda adrese</string>

    <string name="profile">Profil</string>
    <string name="change">Izmeni</string>

    <string name="settings">Podesavanja</string>
    <string name="notifications">Notifikacije</string>
    <string name="signout">Odjavi se</string>
    <string name="support">Podrska</string>

</resources>
