<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    >

    <ImageView
        android:layout_width="25dp"
        android:src="@drawable/username"
        android:layout_height="25dp"
        android:id="@+id/imageViewName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:id="@+id/textView"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:textSize="14dp"
        android:layout_toRightOf="@+id/imageViewName"
        android:layout_toEndOf="@+id/imageViewName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageViewPass"
        android:layout_marginTop="15dp"
        android:src="@drawable/password"
        android:layout_below="@+id/imageViewName"
        android:layout_alignLeft="@+id/imageViewName"
        android:layout_alignStart="@+id/imageViewName" />

    <EditText
        android:textColor="@color/textColor"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textColorHint="@color/textColor"
        android:textSize="14dp"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/imageViewPass"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="157dp">
        <Button
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/button2"
            android:id="@+id/buttonContinue"
            android:layout_marginBottom="20dp"
            android:background="@color/yellow"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPass"
            android:textSize="13dp"
            android:textColor="@color/textColor"
            android:alpha="0.5"
            android:id="@+id/textView3"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
</RelativeLayout>
</ScrollView>

